--- a/HomeApps/Views/Models/Index.cshtml
+++ b/HomeApps/Views/Models/Index.cshtml
@@ -18,16 +18,17 @@
     {
 
         <tr>
-            <th style="padding-right:10px;" ><img style="width:150px;height:150px;" /></th>
+            <th style="padding-right:10px;" ><img style="width:150px;height:150px;" src="~/uploads/@item.FileName" /></th>
             <th>
                 @Html.ActionLink($"{item.FirstName} {item.LastName}", "edit","Models",new { id=item.ModelID},null)
                  <br />@item.Gender<br />@item.PhoneNumber<br />@item.Email
-            <span class="NormalText">Nudes:</span> @item.AllNudes <br /><span class="NormalText">Boudoir:</span> @item.AllBoudoir <br /><span class="NormalText">Erotica:</span> @item.AllErotica
+            <span class="NormalText">Nudes:</span> @item.AllNudes <br /><span class="NormalText">Boudoir:</span> @item.AllBoudoir <br /><span class="NormalText">Erotica:</span>
+                @item.AllErotica
 </th>
             <th>
                 @foreach (var mss in item.ModelSocialSites)
                 {
-                    <a href="@mss.URL">@mss.SocialSite.SocalSiteName</a>
+                    <a target="_blank" href="@mss.URL">@mss.SocialSite.SocalSiteName</a>
                 }
             </th>
         </tr>
