--- a/HomeApps/Views/Shared/PhotoCRM.cshtml
+++ b/HomeApps/Views/Shared/PhotoCRM.cshtml
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Models", "Index", "Models", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Models", "Index", "CameraModels", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Social Sites", "Index", "SocialSites", null, new { @class = "nav-link" })
