--- a/HomeApps/Views/CameraModels/Create.cshtml
+++ b/HomeApps/Views/CameraModels/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 @using (Html.BeginForm("Create",
-                        "Models",
+                        "CameraModels",
                         FormMethod.Post, new { enctype = "multipart/form-data" } ))
 {
     @Html.AntiForgeryToken()
