--- a/HomeApps/Views/CameraModels/Create.cshtml
+++ b/HomeApps/Views/CameraModels/Create.cshtml
@@ -19,7 +19,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("First Name", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Last Name", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.AllNudes, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("All Nudes", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.AllNudes)
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.AllBoudoir, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("All Boudoir", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.AllBoudoir)
@@ -63,7 +63,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.AllErotica, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("All Erotica", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.AllErotica)
@@ -73,7 +73,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Phone Number", htmlAttributes: new { @class = "control -label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
@@ -117,6 +117,8 @@
            
         </div>
     </div>
+
+
 </div>
     <div style="margin-left:10px">
         <a style="margin: 10px 0;" href="javascript:addRow();">Add Other Site</a>
