Updated some tiles and add bootstrap for DI testing.

--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -4,4 +4,6 @@
 }
 
 
-    <div> @Html.ActionLink("Auto", "Index", "Autos", null, new { })</div>
+    <div>@Html.ActionLink("Auto", "Index", "Autos", null, new { })</div>
+<br />
+    <div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
