--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -4,6 +4,9 @@
 }
 
 
-    <div>@Html.ActionLink("Auto", "Index", "Autos", null, new { })</div>
+<div>@Html.ActionLink("Auto", "Index", "Autos", null, new { })</div>
 <br />
-    <div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
+<div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
+<br />
+<div>@Html.ActionLink("Add Actions For Events", "Index", "Actions/Index", null, new { })</div>
+
