--- a/HomeApps/Views/Actions/Index.cshtml
+++ b/HomeApps/Views/Actions/Index.cshtml
@@ -13,7 +13,13 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.IsDeleted)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EventAction.EventActionsID)
         </th>
         <th></th>
     </tr>
@@ -21,7 +27,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.IsDeleted)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EventAction.EventActionsID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ActionID }) |
