--- a/HomeApps/Views/Actions/Details.cshtml
+++ b/HomeApps/Views/Actions/Details.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.EventAction.EventActionsID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EventAction.EventActionsID)
+        </dd>
+
     </dl>
 </div>
 <p>
