--- a/HomeApps/Views/Actions/Details.cshtml
+++ b/HomeApps/Views/Actions/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_MateLayout.cshtml";
 }
 
 <h2>Details</h2>
