--- a/HomeApps/Views/Actions/Edit.cshtml
+++ b/HomeApps/Views/Actions/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_MateLayout.cshtml";
 }
 
 <h2>Edit</h2>
