--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -1,12 +1,22 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "App List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    HomeApps.Models.UserViewModel currentuser = this.Session["_CurrentUser"] as HomeApps.Models.UserViewModel;
 }
 
-
+@if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Auto").Equals(true))
+{
 <div>@Html.ActionLink("Auto", "Index", "Autos", null, new { })</div>
 <br />
+}
+@if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Models").Equals(true))
+{
 <div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
 <br />
-<div>@Html.ActionLink("Add Actions For Events", "Index", "Actions/Index", null, new { })</div>
+}
+
+@if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Event").Equals(true))
+{
+<div>@Html.ActionLink("The Event", "Index", "TheEvents/Index", null, new { })</div>
+}
 
