--- a/HomeApps/Views/TheEvents/Delete.cshtml
+++ b/HomeApps/Views/TheEvents/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeApps.Action
+﻿@model HomeApps.TheEvent
 
 @{
     ViewBag.Title = "Delete";
@@ -9,9 +9,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Action</h4>
+    <h4>TheEvent</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.DateOfEvent)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateOfEvent)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DateofEventOffSet)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateofEventOffSet)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.IsDeleted)
         </dt>
@@ -21,19 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.EventName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EventAction.EventActionsID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EventAction.EventActionsID)
+            @Html.DisplayFor(model => model.EventName)
         </dd>
 
     </dl>
