--- a/HomeApps/Views/UsersPeoples/Delete.cshtml
+++ b/HomeApps/Views/UsersPeoples/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeApps.Action
+﻿@model HomeApps.UsersPeople
 
 @{
     ViewBag.Title = "Delete";
@@ -9,31 +9,39 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Action</h4>
+    <h4>UsersPeople</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
+            @Html.DisplayNameFor(model => model.PersonName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
+            @Html.DisplayFor(model => model.PersonName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Notes)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Notes)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EventAction.EventActionsID)
+            @Html.DisplayNameFor(model => model.User.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EventAction.EventActionsID)
+            @Html.DisplayFor(model => model.User.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Gender.Gender1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Gender.Gender1)
         </dd>
 
     </dl>
