Changes to miles, store and starting API

--- a/HomeApps/Views/Miles/Create.cshtml
+++ b/HomeApps/Views/Miles/Create.cshtml
@@ -127,7 +127,8 @@
 
                     $('#myModal').hide()
                     $("#StationID").append($('<option/>', {value: data,text: name}));
-                        alert('New Station Added')
+                    alert('New Station Added');
+                    $("#NewStationName").val('');
                 
                 }
 
