--- a/HomeApps/Views/Actions/Create.cshtml
+++ b/HomeApps/Views/Actions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeApps.Action
+﻿@model  string
 
 @{
     ViewBag.Title = "Create";
@@ -7,7 +7,7 @@
 
 <h2>Create Action</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","Actions",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
@@ -17,10 +17,10 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Event Act", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.Editor("action", new { htmlAttributes = new { @class = "form-control" } })
+              
             </div>
         </div>
 
