--- a/HomeApps/Views/TheEvents/Create.cshtml
+++ b/HomeApps/Views/TheEvents/Create.cshtml
@@ -38,31 +38,47 @@
             @Html.ValidationMessageFor(model => model.EventName, "", new { @class = "text-danger" })
         </div>
     </div>
+    
+</div>
 
+
+<div id="EventActions">
+
+</div>
+
+<input type="button" id="AddEvents" value="Add" onclick="javascript:AddNewAction()">
+
+<div id="SchemaAction" hidden>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        @Html.Label("Giving Person", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("GivingPerson_X", null, htmlAttributes: new {@class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.Label("Action Done", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @foreach (var item in ViewBag.ActionsDone)
+            {
+                HomeApps.Action action = item;
+
+                <span>@Html.CheckBox("ActionID_X",false,new { @value = action.ActionID }) @Html.Label(action.Name)</span>
+
+            }
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.Label("Reveliving Person", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("RevelivingPerson_X", null, htmlAttributes: new { @class = "form-control" })
+        </div>
+    </div>
+
 </div>
 
-
 <div class="form-group">
-    @Html.Label("Giving Person", htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.DropDownList("GivingPerson", null, htmlAttributes: new { @class = "form-control" })
-    </div>
-</div>
-<div class="form-group">
-    @Html.Label("Action Done", htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.DropDownList("ActionsDone", null, htmlAttributes: new { @class = "form-control" })
-    </div>
-</div>
-<div class="form-group">
-    @Html.Label("Reveliving Person", htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.DropDownList("RevelivingPerson", null, htmlAttributes: new { @class = "form-control" })
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Create" class="btn btn-default" />
     </div>
 </div>
 
@@ -71,3 +87,17 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+
+<script>
+    var CurrentActionGroup = 1;
+
+    function AddNewAction() {
+        var data = $("#SchemaAction").html().replaceAll('X',CurrentActionGroup);
+        var man = $("#EventActions");
+        man.append(data);
+    }
+
+
+</script>
